# shopping-list

./: .gitignore  LICENSE  Makefile  README.md  coverage.cfg  pyproject.toml  ruff.toml  ruff_defaults.toml
shopping_list/: cli.py  items.py  log.py  models.py  parse.py  report.py
tests/: test_foo.py  test_items.py
